; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_cgroup-show.c_show_cgroup_and_extra.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_cgroup-show.c_show_cgroup_and_extra.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @show_cgroup_and_extra(i8* %0, i8* %1, i8* %2, i64 %3, i32* %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i8* %0, i8** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i64 %3, i64* %12, align 8
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  %17 = load i8*, i8** %10, align 8
  %18 = call i32 @assert(i8* %17)
  %19 = load i8*, i8** %9, align 8
  %20 = load i8*, i8** %10, align 8
  %21 = load i8*, i8** %11, align 8
  %22 = load i64, i64* %12, align 8
  %23 = load i32, i32* %15, align 4
  %24 = call i32 @show_cgroup(i8* %19, i8* %20, i8* %21, i64 %22, i32 %23)
  store i32 %24, i32* %16, align 4
  %25 = load i32, i32* %16, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %7
  %28 = load i32, i32* %16, align 4
  store i32 %28, i32* %8, align 4
  br label %38

29:                                               ; preds = %7
  %30 = load i8*, i8** %9, align 8
  %31 = load i8*, i8** %10, align 8
  %32 = load i8*, i8** %11, align 8
  %33 = load i64, i64* %12, align 8
  %34 = load i32*, i32** %13, align 8
  %35 = load i32, i32* %14, align 4
  %36 = load i32, i32* %15, align 4
  %37 = call i32 @show_extra_pids(i8* %30, i8* %31, i8* %32, i64 %33, i32* %34, i32 %35, i32 %36)
  store i32 %37, i32* %8, align 4
  br label %38

38:                                               ; preds = %29, %27
  %39 = load i32, i32* %8, align 4
  ret i32 %39
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @show_cgroup(i8*, i8*, i8*, i64, i32) #1

declare dso_local i32 @show_extra_pids(i8*, i8*, i8*, i64, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
